fix: remove gap below course iframe
Bug exists in vanilla Blackboard Ultra too

--- a/src/styles/online.manchester.ac.uk_ultra.scss
+++ b/src/styles/online.manchester.ac.uk_ultra.scss
@@ -381,6 +381,14 @@ button.anchor,
     .bb-offcanvas-panel.full {
         width: calc(100% - 3rem) !important;
     }
+    .iframe-wrapper {
+        height: 100% !important;
+        padding-bottom: 0 !important;
+
+        iframe {
+            height: 100% !important;
+        }
+    }
 }
 
 @media screen and (width <= 63.9375em) {
